--- a/scroll_based_animation/src/style.css
+++ b/scroll_based_animation/src/style.css
@@ -4,12 +4,14 @@
     padding: 0;
 }
 
-html,
+/* html,
 body
 {
     overflow: hidden;
+} */
+html{
+    background:#1e1a20
 }
-
 .webgl
 {
     position: fixed;
@@ -27,7 +29,6 @@ body
     position: relative;
     font-family: 'Cabin', sans-serif;
     color: #ffeded;
-    text-transform: uppercase;
     font-size: 7vmin;
     padding-left: 10%;
     padding-right: 10%;
